--- a/Health_Outcomes_Exploratory_Analysis.Rmd
+++ b/Health_Outcomes_Exploratory_Analysis.Rmd
@@ -86,6 +86,9 @@ ggplotly(asthma_plot)
 ```
 ** Red Line: national asthma prevalence calculated from national dataset with all states.
 
+The prevalence for asthma in the majority of Pennsylvania counties are above the calculated national average (9.7%). The county with the highest prevalence of asthma is Philadelphia County, while the county with the lowest is Montgomery County. 
+&nbsp;
+
 ```{r plot 5, message=FALSE, warning=FALSE}
 
 #Crude Cancer Prevalence Plot
@@ -108,6 +111,10 @@ aes(x = reorder(county,-cancer_crude_prev), y = cancer_crude_prev, color = count
 ggplotly(cancer_plot)
 ```
 ** Red Line: national cancer prevalence calculated from CDC dataset with all states.
+
+Again, from the plot above, Tte prevalence for cancer in the majority of Pennsylvania counties are above the calculated national average (5.6%). The county with the highest prevalence of cancer is Cameron County, while the county with the lowest is Philadelphia County. 
+
+&nbsp;
 
 ```{r plot 6, message=FALSE, warning=FALSE}
 
@@ -299,6 +306,8 @@ Access_Score =
 Access_Score
 ```
 
+
+&nbsp;
 ```{r plot 9, message=FALSE, warning=FALSE}
 no_superfund = 
   full_join(superfund_score, health_prev, by = "county") %>%
