--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -1,47 +1,50 @@
 ---
-title: "Data Cleaning"
+title: "Maps"
 author: "Vanessa Dinh"
 output: github_document
 ---
 
 
-```{r}
+```{r setup, include = FALSE}
 library(tidyverse)
 library(sf)
 library(tmap)
 library(tmaptools)
 ```
 
-```{r}
+```{r include = FALSE}
 health_outcomes = 
   read_csv("./data/PLACES_County_2022.csv") %>% 
   janitor::clean_names() %>% 
   select(-state_abbr, -state_desc) %>% 
   rename(county = county_name) %>% 
   mutate(
-    county = as.factor(county)
+    county = as.factor(county),
+    county = str_to_title(county)
   ) %>% 
   select(county, county_fips, total_population, starts_with("access2"), starts_with("binge"), starts_with("cancer"), starts_with("casthma"), starts_with("smoking"), starts_with("depression"), starts_with("lpa"), starts_with("mhlth"), starts_with("obesity"), geolocation
   )
-str(health_outcomes)
+
 ```
 
-```{r}
+```{r include = FALSE}
 superfund_sites =
   read_csv("./data/superfund_NPL_sites.csv") %>% 
   janitor::clean_names() %>% 
   select(-region_id, -state, -construction_completion_number, -site_listing_narrative, -site_progress_profile, -ends_with("notice"), -restoration_fr_notice_jumper_page, -noid_date, -deletion_date) %>% 
+   mutate(
+    county = str_to_title(county)
+  ) %>% 
   filter(status == "NPL Site")
+ 
 
 sf_superfund = 
-  st_as_sf(superfund_sites, coords = c("longitude", "latitude"), crs = 4269)
+  st_as_sf(superfund_sites, coords = c("longitude", "latitude"), crs = 4269) %>% 
+  select(site_name, x, y, everything())
 
-tm_shape(sf_superfund)+
-  tm_dots()
-st_crs(sf_superfund)
 ```
 
-```{r}
+```{r include = FALSE}
 superfund_by_county =
   superfund_sites %>% 
   group_by(county) %>% 
@@ -49,11 +52,10 @@ superfund_by_county =
   mutate(
     county = as.factor(county)
   )
-  
-str(superfund_by_county)
+
 ```
 
-```{r}
+```{r include = FALSE}
 pa_county =
   st_read("./data/PaCounty2022_11.shp") %>% 
   janitor::clean_names() %>% 
@@ -62,11 +64,11 @@ pa_county =
     county = str_to_title(county)
 ) %>% 
   select(county, fips_count, shape_leng, shape_area, geometry)
-tm_shape(pa_county) +
-  tm_polygons()
+
 ```
 
-```{r}
+
+```{r include = FALSE}
 only_data =
   left_join(health_outcomes, superfund_by_county, by = "county") %>% 
   mutate_at(vars("n_superfund"), ~replace(., is.na(.), 0))
@@ -75,18 +77,48 @@ pa_combined =
   
 ```
 
-```{r}
+
+```{r echo = FALSE}
 tm_shape(pa_county) +
   tm_polygons(col = "grey90",
               border.col = "white") + 
-tm_shape(sf_superfund) +
+  tm_shape(sf_superfund) +
   tm_dots(col = "brown",
-          alpha = 1)
+          alpha = 1) +
+  tm_layout(
+    main.title = "Active NPL Superfund Sites in Pennsylvania, 2022",
+    main.title.position = "center",
+    frame = FALSE
+  ) +
+  tm_compass(position = c("right", "bottom"), size = 1.3) +
+  tm_scale_bar(position = c("left", "bottom", size = 1.3)) +
+  tm_layout(inner.margins = c(0.2, 0.02, 0.02, 0.02))
+
+```
+
+
+```{r echo = FALSE}
 tm_shape(pa_combined) +
   tm_polygons(col = "n_superfund",
               style = "jenks",
-              n = 4,
+              n = 5,
               palette = "YlOrBr",
               border.col = "black",
-              title = "Superfund Sites in PA")
+              title = "Superfund Sites") +
+  tm_layout(
+    main.title = "Number of Superfund Sites by County, Pennsylvania 2022",
+    main.title.position = "center",
+    main.title.size = 1.2,
+    legend.position = c("right", "center"),
+    legend.outside = TRUE,
+    #legend.outside.size = 0.5,
+    legend.title.size = 0.8,
+    legend.text.size = 0.6,
+    frame = FALSE
+  ) +
+  tm_compass(position = c("right", "bottom"), size = 1.1) +
+  tm_scale_bar(position = c("left", "bottom", size = 1.3)) +
+  tm_layout(inner.margins = c(0.2, 0.02, 0.02, 0.0))
 ```
+
+
