--- a/Health_Outcomes_Exploratory_Analysis.Rmd
+++ b/Health_Outcomes_Exploratory_Analysis.Rmd
@@ -38,7 +38,9 @@ h1.title {
 
 &nbsp;
 
-The main health outcomes of interest are asthma and cancer, since we hypothesize that residents who live in counties with Superfund sites are more likely to be exposed to hazardous waste which will increase their risk of cancer and asthma. Other variables we are interested in exploring are lack of health insurance, smoking, and depression along with the mean site score of the Superfunds in each county.
+The main health outcomes of interest are asthma and cancer, since we hypothesize that residents who live in counties with Superfund sites are more likely to be exposed to hazardous waste which will increase their risk of cancer and asthma. Other variables we are interested in exploring are lack of health insurance, smoking, and depression along with the mean site score of the Superfunds in each county. 
+
+Primarily, we are interested in seeing if living in a county with high average Superfund site score would correlate with asthma or cancer prevalence. 
 
 &nbsp;
 ```{r plot 4, message=FALSE, warning=FALSE}
@@ -112,7 +114,7 @@ ggplotly(cancer_plot)
 ```
 ** Red Line: national cancer prevalence calculated from CDC dataset with all states.
 
-Again, from the plot above, Tte prevalence for cancer in the majority of Pennsylvania counties are above the calculated national average (5.6%). The county with the highest prevalence of cancer is Cameron County, while the county with the lowest is Philadelphia County. 
+Again, from the plot above, the prevalence for cancer in the majority of Pennsylvania counties are above the calculated national average (5.6%). The county with the highest prevalence of cancer is Cameron County (9.5%), while the county with the lowest is Philadelphia County (5.5%). 
 
 &nbsp;
 
@@ -208,7 +210,7 @@ Asthma_Score =
   geom_point(aes(color = county)) +
    theme(legend.position = "none") + 
   labs(
-    x = "Mean of SuperFund Site Score In Each County",
+    x = "Mean of Superfund Site Score In Each County",
     y = "Crude Asthma Prevalence"
   ) 
 
@@ -223,6 +225,7 @@ asthma_predict_panel +
   ) + 
   plot_layout(guides = "collect")
 ```
+From these four scatter plots with best fit lines grouped by asthma as the dependent variable, smoking prevalence, depression prevalence, and lack of insurance, all have a positive relationship with asthma prevalence on the county level. Mean Superfund site score seems to be more randomly distributed, with a slight downward trend that is likely influenced by the one outlier. 
 
 ```{r plot 7, message=FALSE, warning=FALSE}
 Cancer_Smoking =
@@ -274,7 +277,7 @@ Cancer_Score =
   geom_smooth(method = "lm", se = FALSE) +
    theme(legend.position = "none") + 
   labs(
-    x = "Mean of SuperFund Site Score In Each County",
+    x = "Mean of Superfund Site Score In Each County",
     y = "Crude Cancer Prevalence"
   ) 
 
@@ -282,13 +285,17 @@ cancer_predict_panel = (Cancer_Smoking + Cancer_Depression) / (Cancer_Access + C
 
 cancer_predict_panel + 
   plot_annotation(
-    title = "Association Between Xancer Prevalence and Given Predictors",
+    title = "Association Between Cancer Prevalence and Given Predictors",
     subtitle = " County Level Data") + 
   theme(
     legend.position = "bottom"
   ) + 
   plot_layout(guides = "collect")
 ```
+
+For Cancer Prevalence as the outcome, smoking and depression have a slight positive correlation with ashtma prevalence on the county level. On the other hand, lack of insurance and mean superfund site score seem to have a more random distribution with cancer. The best fit line for these two outcomes show a slight negative correlation but it is likely influenced by the outliers.  
+
+
 ```{r plot 8, message=FALSE, warning=FALSE}
 Access_Score =
   health_score %>% 
@@ -305,9 +312,10 @@ Access_Score =
   ggtitle("Association Between Mean Site Score and Lack of Insurance Prevalence")
 Access_Score
 ```
-
+There appears to be very low correlation between lack of health insurance and mean county Superfund site core at the county level.
 
 &nbsp;
+
 ```{r plot 9, message=FALSE, warning=FALSE}
 no_superfund = 
   full_join(superfund_score, health_prev, by = "county") %>%
@@ -343,5 +351,6 @@ asthma_superfund =
    yaxis = list(title = "Crude Prevalence")) 
 
 asthma_superfund 
- 
 ```
+
+Counties that have Superfund sites located in their counties compared to counties that did not have any Superfund sites in their counties appeared to have similar median prevalence values across all three variables of asthma, cancer, and lack of health insurance prevalence. Counties with Superfund sites do have a larger range for their prevalence of lack of health insurance. 
