--- a/Cancer_regression.Rmd
+++ b/Cancer_regression.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Cancer Regression"
-output: html_document
+output: 
+  html_document:
+    code_folding: hide
+    toc: true
+    toc_float: true
 ---
 
 
@@ -94,11 +98,11 @@ combined_data_final=
           )
 ```
 
-##Outcome: Cancer Prevalence
+## Outcome: Cancer Prevalence
 
 The data provided is at the state-level, however it was converted to county-level for the purpose of this model. We were originally given the The outcome of interest is the number of individuals with cancer in a 1 year period by county differed by county.As this was count data, Poisson Regression with a log link function was utilized.No offset term was utilized in the data as count data is modeled. 
 
-#Crude Model
+# Crude Model
 
 We evaluated the  cancer crude counts (total number of individuals who had cancer by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased cancer prevalence, with the greatest occurring among Allegheny county (RR: 10.759, 95% CI (10.636, 10.883)). 
 
@@ -118,7 +122,7 @@ We evaluated the  cancer crude counts (total number of individuals who had cance
   knitr::kable(digits = 3)
 ```
 
-#Confounder Selection: Analyze these values: 
+# Confounder Selection: Analyze these values: 
 
 We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavoral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
 
@@ -167,7 +171,7 @@ combined_data_final %>%
 ```
 
 
-#Adjusted Analysis
+# Adjusted Analysis
 
 After adjustment for these factors we find that our confounding factors (including the interaction term between Superfund_sites and county) are not significant, they do impact the county variables. Notably, when accounting for these variables, Allegheny County no longer is our largest risk ratio but instead Fayette County (RR: 27.051, 95% CI(20.616,35.495)). This would suggest that these factors do indeed impact our measurement of cancer by county. What makes this fascinating is that Fayette County does not have a superfund site, furthering evidence that cancer counts may be due to outside factors not originally in our study.
 
@@ -188,7 +192,7 @@ After adjustment for these factors we find that our confounding factors (includi
   knitr::kable(digits = 3)
 ```
 
-#Model Fit
+# Model Fit
 
 We opted to investigate model fit through analyzing over dispersion. We did not find over dispersion to be an issue in our estimate. 
 
@@ -201,6 +205,6 @@ We opted to investigate model fit through analyzing over dispersion. We did not 
   knitr::kable(digits = 3)
 ```
 
-#Conclusion
+# Conclusion
 
 From our regression analysis the initial analysis points that Superfund sites may not be a primary factor in the difference between cancer sites as our interaction term involving superfund sites and counties with cancer were found to be insignificant. This evidence suggests that there are other factors such as Socioeconomic Status that may be better Social Determinant of Health rather than purely environmental determinants.  
